Ensure that icons aren't cut off by their button container in the editor.

--- a/packages/block-library/src/social-link/editor.scss
+++ b/packages/block-library/src/social-link/editor.scss
@@ -1,6 +1,7 @@
 .wp-block-social-links .wp-social-link button {
 	color: currentColor;
 	padding: 6px;
+	height: var(--wp-social-link-size);
 }
 
 .wp-block-social-links.is-style-pill-shape .wp-social-link button {
